Bug 504395 SimulateImacroCFG leaks tmp_pcstack when LOCAL_ASSERT fails r=graydon